[metadata]
name = cbbuild-database
version = 0.6.0
author = Couchbase Build Team
author_email = build-team@couchbase.com
description = Couchbase Build Team build database package
license = Apache License, Version 2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6, <4
packages = cbbuild.database
install_requires =
    couchbase == 2.2.5

[bdist_wheel]
universal = 1
