[metadata]
name = cbbuild-util
version = 0.6.0
author = Couchbase Build Team
author_email = build-team@couchbase.com
description = Couchbase Build Team utilities package
license = Apache License, Version 2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6, <4
packages = cbbuild.util
install_requires =
    dulwich >= 0.19.9
    lxml >= 3.8.0
    requests >= 2.20.0

[bdist_wheel]
universal = 1
